--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,10 @@ yarn-error.log*
 
 # local env files
 .env.local
+.env
+.env.dev
+.env.prod
+.env.development
 .env.development.local
 .env.test.local
 .env.production.local
