--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "env-cmd -f .env.dev next dev",
+    "prod": "env-cmd -f .env.prod next dev"
   },
   "dependencies": {
     "@auth0/auth0-react": "^1.4.0",
     "@tailwindcss/typography": "^0.4.0",
     "date-fns": "^2.19.0",
+    "env-cmd": "^10.1.0",
     "gray-matter": "4.0.3",
     "ioredis": "^4.27.1",
     "nanoid": "^3.1.22",
